<resources>
    <string name="app_name">GYMology</string>
    <string name="slogan">Study Your Workout</string>
    <string name="saved_workouts">Saved Workouts</string>
    <string name="menu">Menu</string>
    <string name="start_workout">Begin Workout</string>
    <string name="add_new_workout">Add New Workout</string>
    <string name="height_label">Height:</string>
    <string name="weight_label">Weight:</string>
    <string name="reps_label">Reps:</string>
    <string name="time_label">Time:</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="timer">Timer</string>
    <string name="save_set">Save Set</string>
    <string name="log_exercise">Log Exercise</string>
    <string name="stats">My Statistics</string>
    <string name="log_workout">Log Workout</string>
    <string name="edit_workout">Edit Workout Routine</string>
    <string name="create_workout">Create/Edit Workout</string>
    <string name="name_label">Name:</string>
    <string name="type_label">Type:</string>
    <string name="radio_weights">Weights</string>
    <string name="radio_cardio">Cardio</string>
    <string name="radio_HIIT">HIIT</string>
    <string name="save_new">Save New Workout</string>
    <string name="calculate_BMI">Calculate BMI:</string>
    <string name="settings">My Settings</string>
    <string name="age_label">Age:</string>
    <string name="calories_label">Estimate Calories?</string>
    <string name="water_label">Water Reminders?</string>
    <string name="meal_label">Meal Reminders?</string>
    <string name="save_settings">Save Settings</string>
    <string name="stats_button">View Stats</string>
    <string name="bmi_button">View BMI</string>
    <string name="database_label">Exercises Database</string>
    <string name="very_severely_underweight">Very Severely Underweight</string>
    <string name="severely_underweight">Severely Underweight</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese_class_i">Obese Class 1</string>
    <string name="obese_class_ii">Obese Class 2</string>
    <string name="obese_class_iii">Obese Class 3</string>
    <string name="workout_name">Workout Name</string>
    <string name="years">Years</string>
    <string name="inches">Inches</string>
    <string name="pounds">Pounds</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="_00_00">00:00</string>
    <string name="chest_amp_arms"><![CDATA[Chest & Arms]]></string>
    <string name="minutes">Minutes</string>
    <string name="set">Set</string>
    <string name="calf_raises">Calf Raises</string>
    <string name="videolink">VideoLink</string>
    <string name="_50">50</string>
    <string name="_12">12</string>
    <string name="hh_mm_ss">HH:MM:SS</string>
    <string name="repeat_last_workout">Repeat Last Workout</string>
    <string name="view_stats">View Stats</string>
    <string name="calendar">Calendar</string>
    <string name="schedule_workout">Schedule Workout</string>
    <string name="countdown_timer">Countdown Timer</string>
    <string name="load_workout_routines">Load Workout Routines</string>

    <!--     Dropdown Menu options-->
    <string-array name="workout_array">
        <item>Arms</item>
        <item>Abs</item>
        <item>Back</item>
        <item>Calves</item>
        <item>Chest</item>
        <item>Legs</item>
        <item>Shoulders</item>
    </string-array>
</resources>