<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/prussianBlue">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="showClose"
        android:text="@string/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <menu.semiradialmenu.RadialMenuView
        android:id="@+id/radial_menu_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button"
        android:visibility="gone"
        android:translationZ="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/exerciseName"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient"
        android:gravity="center"
        android:text="@string/calf_raises"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/exerciseVideo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/videolink"
        android:onClick="exerciseVideo"
        app:layout_constraintEnd_toEndOf="@+id/exerciseName"
        app:layout_constraintTop_toTopOf="@+id/exerciseName"
        app:srcCompat="@android:drawable/presence_video_online" />

    <TextView
        android:id="@+id/weightLabel"
        android:layout_width="106dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="center_vertical"
        android:text="@string/weight_label"
        android:textColor="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/repsLabel"
        app:layout_constraintTop_toBottomOf="@+id/exerciseName"
        tools:text="@string/weight_label" />

    <TextView
        android:id="@+id/repsLabel"
        android:layout_width="106dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="center_vertical"
        android:text="@string/reps_label"
        android:textColor="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseName" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="106dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="center_vertical"
        android:text="@string/time_label"
        android:textColor="@color/gray"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/repsLabel"
        app:layout_constraintTop_toBottomOf="@+id/exerciseName" />

    <EditText
        android:id="@+id/input_weight"
        android:layout_width="106dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="50"
        android:background="@color/lightCyan"
        android:gravity="center"
        android:hint="@string/_50"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/input_reps"
        app:layout_constraintTop_toBottomOf="@+id/weightLabel" />

    <EditText
        android:id="@+id/input_reps"
        android:layout_width="106dp"
        android:layout_height="50dp"
        android:autofillHints="12"
        android:background="@color/lightCyan"
        android:gravity="center"
        android:hint="@string/_12"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repsLabel" />

    <EditText
        android:id="@+id/input_time"
        android:layout_width="106dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:autofillHints="HH:MM:SS"
        android:background="@color/lightCyan"
        android:gravity="center"
        android:hint="@string/hh_mm_ss"
        android:inputType="time"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/input_reps"
        app:layout_constraintTop_toBottomOf="@+id/timeLabel" />

    <TableRow
        android:id="@+id/tableRowSet1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_saveSet" />

    <Button
        android:id="@+id/btn_timer"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@color/grayWeb"
        android:onClick="timer"
        android:text="@string/timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_stopwatch"
        app:layout_constraintTop_toBottomOf="@+id/input_reps" />

    <Button
        android:id="@+id/btn_saveSet"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@color/oxfordBlue"
        android:text="@string/save_set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_timer" />

    <Button
        android:id="@+id/btn_stopwatch"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@color/grayWeb"
        android:backgroundTint="@color/grayWeb"
        android:onClick="stopwatch"
        android:text="@string/stopwatch"
        app:layout_constraintEnd_toStartOf="@+id/btn_timer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_reps" />

    <Button
        android:id="@+id/btn_saveNewWO"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/log_exercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_exercises" />

    <ListView
        android:id="@+id/list_exercises"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="12dp"
        android:background="#E6EFCE6C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRowSet1" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:background="@color/prussianBlue"
        android:backgroundTint="@color/prussianBlue"
        app:layout_constraintStart_toEndOf="@+id/exerciseName"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>