<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/prussianBlue"
    tools:context="team13.gymology.Timer">

    <TextView
        android:id="@+id/label_timer"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:background="@drawable/gradient"
        android:gravity="center"
        android:text="@string/countdown_timer"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_input"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="0dp"
        android:autofillHints=""
        android:background="@color/lightCyan"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/minutes"
        android:inputType="number"
        android:maxLength="4" />

    <Button
        android:id="@+id/button_set"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@id/edit_text_input"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="141dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/set" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_set"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/_00_00"
        android:textColor="#ccfbfe"
        android:textSize="60sp"
        app:drawableTopCompat="@drawable/ic_timer" />

    <Button
        android:id="@+id/button_start_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_countdown"
        android:layout_centerHorizontal="true"
        android:text="@string/start" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_start_pause"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-89dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/button_start_pause"
        android:text="@string/reset"
        android:visibility="invisible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="showClose"
        android:text="@string/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <menu.semiradialmenu.RadialMenuView
        android:id="@+id/radial_menu_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button"
        android:visibility="gone"
        android:translationZ="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</RelativeLayout>