<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/prussianBlue"
    android:gravity="center"
    tools:context="team13.gymology.Stopwatch">

    <TextView
        android:id="@+id/label_stopwatch"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient"
        android:gravity="center"
        android:text="@string/stopwatch"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:textColor="@color/lightCyan"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_startSW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:onClick="startChronometer"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="@+id/chronometer"
        app:layout_constraintTop_toBottomOf="@+id/chronometer" />

    <Button
        android:id="@+id/btn_pauseSW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="pauseChronometer"
        android:text="@string/pause"
        app:layout_constraintStart_toStartOf="@+id/btn_startSW"
        app:layout_constraintTop_toBottomOf="@+id/btn_startSW" />

    <Button
        android:id="@+id/btn_resetSW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="resetChronometer"
        android:text="@string/reset"
        app:layout_constraintStart_toStartOf="@+id/btn_pauseSW"
        app:layout_constraintTop_toBottomOf="@+id/btn_pauseSW" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="showClose"
        android:text="@string/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <menu.semiradialmenu.RadialMenuView
        android:id="@+id/radial_menu_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button"
        android:visibility="gone"
        android:translationZ="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>