<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/prussianBlue"
    tools:context=".Profile">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="showClose"
        android:text="@string/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <menu.semiradialmenu.RadialMenuView
        android:id="@+id/radial_menu_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button"
        android:visibility="gone"
        android:translationZ="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="#C2D0DC"
        android:gravity="center"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ageProfile"
        android:layout_width="106dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="text"
        android:text="@string/age_label"
        android:textColor="@color/gray"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <EditText
        android:id="@+id/input_age"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:background="@color/light_gray"
        android:gravity="center"
        android:hint="Years"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <TextView
        android:id="@+id/heightProfile"
        android:layout_width="106dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="text"
        android:text="@string/height_label"
        android:textColor="@color/gray"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageProfile" />

    <EditText
        android:id="@+id/input_height"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:background="@color/light_gray"
        android:gravity="center"
        android:hint="Inches"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_age" />

    <TextView
        android:id="@+id/weightProfile"
        android:layout_width="106dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="text"
        android:text="@string/weight_label"
        android:textColor="@color/gray"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightProfile" />

    <EditText
        android:id="@+id/input_weight"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:background="@color/light_gray"
        android:gravity="center"
        android:hint="Pounds"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_height" />

    <TableRow
        android:id="@+id/tableRowSet1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="24dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightProfile" />

    <TextView
        android:id="@+id/typeLabel"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="text"
        android:text="@string/calories_label"
        android:textColor="@color/gray"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRowSet1" />

    <TextView
        android:id="@+id/waterLabel"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="text"
        android:text="@string/water_label"
        android:textColor="@color/gray"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeLabel" />

    <TextView
        android:id="@+id/mealLabel"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="text"
        android:text="@string/meal_label"
        android:textColor="@color/gray"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waterLabel" />

    <CheckBox
        android:id="@+id/checkbox_calories"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRowSet1" />

    <CheckBox
        android:id="@+id/checkbox_calories2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_calories" />

    <CheckBox
        android:id="@+id/checkbox_calories3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_calories2" />

    <TableRow
        android:id="@+id/tableRowSet2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="24dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealLabel" />

    <Button
        android:id="@+id/btn_viewBMI"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:onClick="bmiCalc"
        android:text="@string/bmi_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRowSet2" />

    <Button
        android:id="@+id/btn_stats"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/stats_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRowSet2" />

    <Button
        android:id="@+id/btn_saveSettings"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/save_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_stats" />


</androidx.constraintlayout.widget.ConstraintLayout>